feat: 기능 구현 목록 재정의 및 리팩토링